<resources>
    <string name="app_name">Picker App</string>
    <string name="Seleccione_la_tienda">Seleccione la Tienda</string>
    <string name="buscar_orden">Buscar orden</string>
    <string name="no_resultado">No se encontró resultado</string>
    <string name="listado">Listado</string>
    <string name="pick">Pick</string>
    <string name="ok">OK</string>
    <string name="eliminar_bolsa">Seguro deseas eliminar esta bolsa?</string>
    <string name="eliminar_bin">Deseas eliminar este bin?</string>
    <string name="cancel">Cancelar</string>
    <string name="si">Si</string>
    <string name="close_order">Complete Order</string>
    <string name="bin_edit">Bin Edit</string>
    <string name="guardar">Guardar</string>
    <string name="agregar_bolsa">Desbes agregar una bolsa</string>
    <string name="add_bin">ADD BIN</string>
    <string name="add_bag">ADD BAG</string>
    <string name="select_bin">Select Bin</string>
    <string name="no_bag_added">Aquí se mostrarán las bolsas que agregues</string>
    <string name="zero_items">(0) Items</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="url_checker">https://www.thehousetoyou.com/api-picker/api-checker/</string>
    <string name="url_picker">https://www.thehousetoyou.com/api-picker/</string>
    <string name="api_update_apk">https://www.thehousetoyou.com/api-picker/picker.apk</string>
    <string name="confirmar">Confirmar</string>
    <string name="vrf">Vrf</string>
    <string name="of">/</string>
    <string name="zero_qty">0</string>
    <string name="back">Back</string>
    <string name="super_max">Super Max</string>
    <string name="ord">Ord</string>
    <string name="verification_completed">Verify Completed</string>
    <string name="tipo">Tipo:</string>
    <string name="entrega">Entrega</string>
    <string name="recogido">Recogido</string>
    <string name="estado_de_orden">Estado de orden:</string>
    <string name="pendiente">Pendiente</string>
    <string name="pend">Pend.</string>
    <string name="listo">Listo</string>
    <string name="espera">Espera</string>
    <string name="no_disp">No Disp.</string>
    <string name="verificado">Verificado</string>
    <string name="horario">Horario:</string>
    <string name="filtrar">Filtrar</string>
    <string name="image">image</string>
    <string name="less_day">-</string>
    <string name="add_day">+</string>
    <string name="producto">Producto</string>
    <string name="qty">Qty</string>
    <string name="del">Del</string>
    <string name="edit_description">Edit Description</string>
    <string name="bag">Bag</string>
    <string name="move_to">Move To</string>
    <string name="location">Location</string>
    <string name="total_all_bags">Total (all bags)</string>
    <string name="sub">sub</string>
    <string name="add">add</string>
    <string name="checker_app">CHECKER/PICKER APP</string>
    <string name="app">APP</string>
    <string name="anadir">Añadir</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="required_username">Nombre de usuario requerido.</string>
    <string name="required_password">Contraseña es requerido.</string>
    <string name="login_failed">Nombre de usuario y/o Contraseña incorrecto.</string>
    <string name="add_item">Add Item</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="search">Search</string>
    <string name="salir">Salir</string>
    <string name="version">Versión</string>
    <string name="agregar_bin_message">Para comenzar favor de agregar un BIN</string>
    <string name="agregar_bolsa_message">Para continuar favor agregar una bolsa de</string>
    <string name="upc">UPC:</string>
    <string name="completado">Completado</string>
    <string name="completar">Completar</string>
    <string name="no_disponible">No disponible</string>
    <string name="notas_administrativas">Notas administrativas</string>
    <string name="ordenado">Ordenado</string>
    <string name="picked">Picked</string>
    <string name="aisle">Aisle:</string>
    <string name="razon_no_disponible">Razón no disponible</string>
    <string name="ord_th">Ord:</string>
    <string name="pick_th">Pick:</string>
    <string name="vrf_th">Vrf:</string>
    <string name="picker">Picker</string>
    <string name="seleccione_tarea">Seleccione Tarea</string>
    <string name="checker">Checker</string>
    <string name="no_hay_productos">No hay productos</string>
    <string name="no_product_added">No has agregado ningún producto</string>
    <string name="alerta_msj"><ul><li>Este producto ha sido marcado como no disponible y no puede ser cambiado.</li></ul></string>
    <string name="completar_orden">Completar Orden</string>
    <string name="confirmacion_orden">Yo %1$s acepto que he completado la orden y está lista para ser revisada.</string>
    <string name="actualizar_pasillo">Actualizar Pasillo</string>
    <string name="buscar_pasillo">Buscar Pasillo</string>
    <string name="picking_completed">Picking Completed</string>
    <string name="reset">Reset</string>
    <string name="ofrecer_sustituto">Ofrecer Sustituto</string>
    <string name="producto_a_sustituir">Producto a Sustituir</string>
    <string name="enviar">Enviar</string>
    <string name="ver_sustitutos"><u>Ver sustitutos</u></string>
    <string name="remover">Remover</string>
    <string name="cerrar">Cerrar</string>
    <string name="downloading_apk_message">Descargando Actualización</string>
    <string name="item_image">Item Image</string>
    <string name="zero_of_zero">0/0</string>
    <string name="scan_with_qty">Scan with qty</string>
    <string name="the_house_to_you">The House To You</string>
    <string name="chat">Chat</string>
    <string name="el_cliente_acept_esperar_24_horas_por_este_producto">El cliente aceptó esperar 24 horas por este producto.</string>
</resources>
