<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_filtros"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <include
        layout="@layout/app_bar_ordenes"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_filtros"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="false">

        <LinearLayout
            android:id="@+id/linearLayoutFiltros"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/chkBoxDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entrega" />

            <CheckBox
                android:id="@+id/chkBoxRecogido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/recogido" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado_de_orden"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/chkBoxPendiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pendiente" />

            <CheckBox
                android:id="@+id/chkBoxVerificado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/verificado" />

            <TextView
                android:id="@+id/txtViewHorario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/horario"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnFiltrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:background="@drawable/ripple_verde_borde_negro_buttons"
                android:text="@string/filtrar" />

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
