<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/edtBinDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_description"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:maxLength="11"
        android:padding="16dp"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/bin_edit"
        tools:targetApi="o" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lyt_th"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:visibility="gone">

        <TextView
            style="@style/list_th"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view11"
            style="@style/line_separator_vertical"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/list_th"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="8dp"
            android:text="@string/move_to"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewBinDialog"
        android:name="com.design2net.supermaxcheckerapp.BinDialogFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:context=".fragments.BinDialogFragment"
        tools:listitem="@layout/row_bin_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEliminar"
            android:text="@string/eliminar"
            style="@style/fragment_btns"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnCancelar"
            android:text="@string/cancel"
            style="@style/fragment_btns"/>

        <Button
            android:id="@+id/btnSave"
            android:text="@string/guardar"
            style="@style/fragment_btns"/>
    </LinearLayout>


</LinearLayout>